// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavTabs does not require history 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-NavTabs)>
        <inject-NavTabs classes={{...}}>
          <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
            <WithStyles(Paper) className="RSFNavTabs-root-512" elevation={2}>
              <Paper className="RSFNavTabs-root-512" elevation={2} classes={{...}} component="div" square={false}>
                <div className="MuiPaper-root-516 MuiPaper-elevation2-520 MuiPaper-rounded-517 RSFNavTabs-root-512">
                  <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                    <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                      <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} variant="scrollable" orientation="horizontal">
                        <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-545 RSFNavTabs-tabs-511" classes={{...}}>
                          <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-545 RSFNavTabs-tabs-511" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                            <div className="MuiTabs-root-553 RSFTabsRow-root-545 RSFNavTabs-tabs-511 RSFTabsRow-root-545 RSFNavTabs-tabs-511" variant="scrollable">
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div className="MuiTabs-flexContainer-554 RSFTabsRow-centered-551">
                                <div className="MuiTabs-scroller-556 RSFTabsRow-scroller-549 MuiTabs-fixed-557" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                                  <div className="MuiTabs-flexContainer-554 RSFTabsRow-centered-551">
                                    <WithStyles(NavTab) text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0}>
                                      <NavTab text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-568" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-565" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-565" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-565" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-570 RSFNavTab-link-565" style={[undefined]} onClick={[Function]} href="https://example.com/1">
                                                      <WithStyles(Tab) className="RSFNavTab-root-562 RSFTabsRow-tab-546 RSFNavTabs-tab-515" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-562 RSFTabsRow-tab-546 RSFNavTabs-tab-515" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-571 MuiTab-textColorInherit-573 RSFNavTab-root-562 RSFTabsRow-tab-546 RSFNavTabs-tab-515" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-571 MuiTab-textColorInherit-573 RSFNavTab-root-562 RSFTabsRow-tab-546 RSFNavTabs-tab-515" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-583 MuiTab-root-571 MuiTab-textColorInherit-573 RSFNavTab-root-562 RSFTabsRow-tab-546 RSFNavTabs-tab-515" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-579">
                                                                  <span className="MuiTab-labelContainer-580">
                                                                    <span className="MuiTab-label-581 RSFNavTab-label-564">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-586" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-586" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                    <WithStyles(NavTab) text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1}>
                                      <NavTab text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-568" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-565" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-565" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-565" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-570 RSFNavTab-link-565" style={[undefined]} onClick={[Function]} href="https://example.com/2">
                                                      <WithStyles(Tab) className="RSFNavTab-root-562 RSFTabsRow-tab-546 RSFNavTabs-tab-515" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-562 RSFTabsRow-tab-546 RSFNavTabs-tab-515" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-571 MuiTab-textColorInherit-573 RSFNavTab-root-562 RSFTabsRow-tab-546 RSFNavTabs-tab-515" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-571 MuiTab-textColorInherit-573 RSFNavTab-root-562 RSFTabsRow-tab-546 RSFNavTabs-tab-515" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-583 MuiTab-root-571 MuiTab-textColorInherit-573 RSFNavTab-root-562 RSFTabsRow-tab-546 RSFNavTabs-tab-515" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-579">
                                                                  <span className="MuiTab-labelContainer-580">
                                                                    <span className="MuiTab-label-581 RSFNavTab-label-564">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-586" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-586" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                  </div>
                                  <WithStyles(TabIndicator) className="MuiTabs-indicator-561 RSFTabsRow-indicator-543 RSFTabsRow-noSelection-544" color="secondary" style={{...}}>
                                    <TabIndicator className="MuiTabs-indicator-561 RSFTabsRow-indicator-543 RSFTabsRow-noSelection-544" color="secondary" style={{...}} classes={{...}}>
                                      <span className="MuiPrivateTabIndicator-root-593 MuiPrivateTabIndicator-colorSecondary-595 MuiTabs-indicator-561 RSFTabsRow-indicator-543 RSFTabsRow-noSelection-544" style={{...}} />
                                    </TabIndicator>
                                  </WithStyles(TabIndicator)>
                                </div>
                              </div>
                            </div>
                          </Tabs>
                        </WithStyles(Tabs)>
                      </TabsRow>
                    </inject-TabsRow-with-app>
                  </WithStyles(inject-TabsRow-with-app)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </NavTabs>
        </inject-NavTabs>
      </WithStyles(inject-NavTabs)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`NavTabs renders 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-NavTabs)>
        <inject-NavTabs classes={{...}}>
          <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
            <WithStyles(Paper) className="RSFNavTabs-root-2" elevation={2}>
              <Paper className="RSFNavTabs-root-2" elevation={2} classes={{...}} component="div" square={false}>
                <div className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 RSFNavTabs-root-2">
                  <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                    <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                      <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} variant="scrollable" orientation="horizontal">
                        <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-35 RSFNavTabs-tabs-1" classes={{...}}>
                          <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-35 RSFNavTabs-tabs-1" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                            <div className="MuiTabs-root-43 RSFTabsRow-root-35 RSFNavTabs-tabs-1 RSFTabsRow-root-35 RSFNavTabs-tabs-1" variant="scrollable">
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div className="MuiTabs-flexContainer-44 RSFTabsRow-centered-41">
                                <div className="MuiTabs-scroller-46 RSFTabsRow-scroller-39 MuiTabs-fixed-47" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                                  <div className="MuiTabs-flexContainer-44 RSFTabsRow-centered-41">
                                    <WithStyles(NavTab) text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0}>
                                      <NavTab text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-58" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-55" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-55" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-55" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-60 RSFNavTab-link-55" style={[undefined]} onClick={[Function]} href="https://example.com/1">
                                                      <WithStyles(Tab) className="RSFNavTab-root-52 RSFTabsRow-tab-36 RSFNavTabs-tab-5" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-52 RSFTabsRow-tab-36 RSFNavTabs-tab-5" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-61 MuiTab-textColorInherit-63 RSFNavTab-root-52 RSFTabsRow-tab-36 RSFNavTabs-tab-5" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-61 MuiTab-textColorInherit-63 RSFNavTab-root-52 RSFTabsRow-tab-36 RSFNavTabs-tab-5" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-73 MuiTab-root-61 MuiTab-textColorInherit-63 RSFNavTab-root-52 RSFTabsRow-tab-36 RSFNavTabs-tab-5" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-69">
                                                                  <span className="MuiTab-labelContainer-70">
                                                                    <span className="MuiTab-label-71 RSFNavTab-label-54">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-76" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-76" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                    <WithStyles(NavTab) text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1}>
                                      <NavTab text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-58" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-55" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-55" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-55" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-60 RSFNavTab-link-55" style={[undefined]} onClick={[Function]} href="https://example.com/2">
                                                      <WithStyles(Tab) className="RSFNavTab-root-52 RSFTabsRow-tab-36 RSFNavTabs-tab-5" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-52 RSFTabsRow-tab-36 RSFNavTabs-tab-5" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-61 MuiTab-textColorInherit-63 RSFNavTab-root-52 RSFTabsRow-tab-36 RSFNavTabs-tab-5" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-61 MuiTab-textColorInherit-63 RSFNavTab-root-52 RSFTabsRow-tab-36 RSFNavTabs-tab-5" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-73 MuiTab-root-61 MuiTab-textColorInherit-63 RSFNavTab-root-52 RSFTabsRow-tab-36 RSFNavTabs-tab-5" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-69">
                                                                  <span className="MuiTab-labelContainer-70">
                                                                    <span className="MuiTab-label-71 RSFNavTab-label-54">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-76" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-76" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                  </div>
                                  <WithStyles(TabIndicator) className="MuiTabs-indicator-51 RSFTabsRow-indicator-33 RSFTabsRow-noSelection-34" color="secondary" style={{...}}>
                                    <TabIndicator className="MuiTabs-indicator-51 RSFTabsRow-indicator-33 RSFTabsRow-noSelection-34" color="secondary" style={{...}} classes={{...}}>
                                      <span className="MuiPrivateTabIndicator-root-83 MuiPrivateTabIndicator-colorSecondary-85 MuiTabs-indicator-51 RSFTabsRow-indicator-33 RSFTabsRow-noSelection-34" style={{...}} />
                                    </TabIndicator>
                                  </WithStyles(TabIndicator)>
                                </div>
                              </div>
                            </div>
                          </Tabs>
                        </WithStyles(Tabs)>
                      </TabsRow>
                    </inject-TabsRow-with-app>
                  </WithStyles(inject-TabsRow-with-app)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </NavTabs>
        </inject-NavTabs>
      </WithStyles(inject-NavTabs)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`NavTabs uses prefetch 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-NavTabs)>
        <inject-NavTabs classes={{...}}>
          <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
            <WithStyles(Paper) className="RSFNavTabs-root-87" elevation={2}>
              <Paper className="RSFNavTabs-root-87" elevation={2} classes={{...}} component="div" square={false}>
                <div className="MuiPaper-root-91 MuiPaper-elevation2-95 MuiPaper-rounded-92 RSFNavTabs-root-87">
                  <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                    <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                      <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} variant="scrollable" orientation="horizontal">
                        <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-120 RSFNavTabs-tabs-86" classes={{...}}>
                          <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-120 RSFNavTabs-tabs-86" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                            <div className="MuiTabs-root-128 RSFTabsRow-root-120 RSFNavTabs-tabs-86 RSFTabsRow-root-120 RSFNavTabs-tabs-86" variant="scrollable">
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div className="MuiTabs-flexContainer-129 RSFTabsRow-centered-126">
                                <div className="MuiTabs-scroller-131 RSFTabsRow-scroller-124 MuiTabs-fixed-132" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                                  <div className="MuiTabs-flexContainer-129 RSFTabsRow-centered-126">
                                    <WithStyles(NavTab) text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch="always" loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0}>
                                      <NavTab text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch="always" loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-143" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-140" to="/1" prefetch="always" onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-140" to="/1" prefetch="always" onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-140" to="/1" prefetch="always" onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-145 RSFNavTab-link-140" style={[undefined]} onClick={[Function]} href="https://example.com/1" data-rsf-prefetch="always">
                                                      <WithStyles(Tab) className="RSFNavTab-root-137 RSFTabsRow-tab-121 RSFNavTabs-tab-90" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-137 RSFTabsRow-tab-121 RSFNavTabs-tab-90" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-146 MuiTab-textColorInherit-148 RSFNavTab-root-137 RSFTabsRow-tab-121 RSFNavTabs-tab-90" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-146 MuiTab-textColorInherit-148 RSFNavTab-root-137 RSFTabsRow-tab-121 RSFNavTabs-tab-90" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-158 MuiTab-root-146 MuiTab-textColorInherit-148 RSFNavTab-root-137 RSFTabsRow-tab-121 RSFNavTabs-tab-90" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-154">
                                                                  <span className="MuiTab-labelContainer-155">
                                                                    <span className="MuiTab-label-156 RSFNavTab-label-139">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-161" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-161" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                    <WithStyles(NavTab) text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch="visible" loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1}>
                                      <NavTab text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch="visible" loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-143" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-140" to="/2" prefetch="visible" onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-140" to="/2" prefetch="visible" onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-140" to="/2" prefetch="visible" onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <VisibilitySensor onChange={[Function]} partialVisibility={true} active={true} minTopValue={0} scrollCheck={false} scrollDelay={250} scrollThrottle={-1} resizeCheck={false} resizeDelay={250} resizeThrottle={-1} intervalCheck={true} intervalDelay={100} delayedCall={false} offset={{...}} containment={{...}}>
                                                      <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-145 RSFNavTab-link-140" style={[undefined]} onClick={[Function]} href="https://example.com/2" data-rsf-prefetch="visible">
                                                        <WithStyles(Tab) className="RSFNavTab-root-137 RSFTabsRow-tab-121 RSFNavTabs-tab-90" label="Tab 1" classes={{...}}>
                                                          <Tab className="RSFNavTab-root-137 RSFTabsRow-tab-121 RSFNavTabs-tab-90" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-146 MuiTab-textColorInherit-148 RSFNavTab-root-137 RSFTabsRow-tab-121 RSFNavTabs-tab-90" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                              <ButtonBase focusRipple={true} className="MuiTab-root-146 MuiTab-textColorInherit-148 RSFNavTab-root-137 RSFTabsRow-tab-121 RSFNavTabs-tab-90" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                                <button className="MuiButtonBase-root-158 MuiTab-root-146 MuiTab-textColorInherit-148 RSFNavTab-root-137 RSFTabsRow-tab-121 RSFNavTabs-tab-90" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                  <span className="MuiTab-wrapper-154">
                                                                    <span className="MuiTab-labelContainer-155">
                                                                      <span className="MuiTab-label-156 RSFNavTab-label-139">
                                                                        Tab 1
                                                                      </span>
                                                                    </span>
                                                                  </span>
                                                                  <NoSsr defer={false} fallback={{...}}>
                                                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                      <TouchRipple center={false} classes={{...}}>
                                                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-161" childFactory={[Function: childFactory]}>
                                                                          <span className="MuiTouchRipple-root-161" />
                                                                        </TransitionGroup>
                                                                      </TouchRipple>
                                                                    </WithStyles(TouchRipple)>
                                                                  </NoSsr>
                                                                </button>
                                                              </ButtonBase>
                                                            </WithStyles(ButtonBase)>
                                                          </Tab>
                                                        </WithStyles(Tab)>
                                                      </a>
                                                    </VisibilitySensor>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                  </div>
                                  <WithStyles(TabIndicator) className="MuiTabs-indicator-136 RSFTabsRow-indicator-118 RSFTabsRow-noSelection-119" color="secondary" style={{...}}>
                                    <TabIndicator className="MuiTabs-indicator-136 RSFTabsRow-indicator-118 RSFTabsRow-noSelection-119" color="secondary" style={{...}} classes={{...}}>
                                      <span className="MuiPrivateTabIndicator-root-168 MuiPrivateTabIndicator-colorSecondary-170 MuiTabs-indicator-136 RSFTabsRow-indicator-118 RSFTabsRow-noSelection-119" style={{...}} />
                                    </TabIndicator>
                                  </WithStyles(TabIndicator)>
                                </div>
                              </div>
                            </div>
                          </Tabs>
                        </WithStyles(Tabs)>
                      </TabsRow>
                    </inject-TabsRow-with-app>
                  </WithStyles(inject-TabsRow-with-app)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </NavTabs>
        </inject-NavTabs>
      </WithStyles(inject-NavTabs)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;
